err/blogtool.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/blogtool'...
Compiling './lib/python3.5/site-packages/blogtool/__init__.py'...
***   File "./lib/python3.5/site-packages/blogtool/__init__.py", line 49
    print "Nothing to do, exiting."
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blogtool/__main__.py'...
***   File "./lib/python3.5/site-packages/blogtool/__main__.py", line 19
    print "Processing post file %s..." % filename
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blogtool/fileprocessor.py'...
***   File "./lib/python3.5/site-packages/blogtool/fileprocessor.py", line 18
    print """
ATTENTION:
You need to install lxml to take full advantage of blogtool capabilities.
Without it, downloading posts is disallowed.  If all you need it to publish
posts to a blog, then this should be fine.

Unfortunately, this annoying warning message will pop-up everytime you run
blogtool.
"""
             
          
                                                                         
                                                                           
                                          

                                                                          
         
  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blogtool/headerparse.py'...
***   File "./lib/python3.5/site-packages/blogtool/headerparse.py", line 654
    print "named_parm"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blogtool/html2md.py'...
***   File "./lib/python3.5/site-packages/blogtool/html2md.py", line 473
    print repr(html)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blogtool/options.py'...
***   File "./lib/python3.5/site-packages/blogtool/options.py", line 25
    except HeaderError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blogtool/utils.py'...
***   File "./lib/python3.5/site-packages/blogtool/utils.py", line 106
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blogtool/xmlproxy'...
Compiling './lib/python3.5/site-packages/blogtool/xmlproxy/__init__.py'...
***   File "./lib/python3.5/site-packages/blogtool/xmlproxy/__init__.py", line 13
    print "Blogtype '%s' not supported." % blogtype
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blogtool/xmlproxy/wp_proxy.py'...
***   File "./lib/python3.5/site-packages/blogtool/xmlproxy/wp_proxy.py", line 36
    except(xmlrpclib.Fault, xmlrpclib.ProtocolError), error:
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blogtool-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
